crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__should_recover_from_missing_param_separator.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.result
---
ast:
  file_id: 0
  items:
    - kind:
        FunctionDefinition:
          signature:
            name:
              symbol: 1
              span:
                start: 5
                end: 9
            params:
              open:
                start: 9
                end: 10
              inner:
                - inner:
                    mutable: ~
                    name:
                      symbol: 2
                      span:
                        start: 10
                        end: 11
                    annotation:
                      separator:
                        start: 11
                        end: 12
                      ty:
                        kind:
                          Identifier:
                            symbol: 3
                        span:
                          start: 13
                          end: 16
                  span:
                    start: 10
                    end: 16
                  separator: ~
                - inner:
                    mutable: ~
                    name:
                      symbol: 4
                      span:
                        start: 18
                        end: 19
                    annotation:
                      separator:
                        start: 19
                        end: 20
                      ty:
                        kind:
                          Identifier:
                            symbol: 3
                        span:
                          start: 21
                          end: 24
                  span:
                    start: 18
                    end: 24
                  separator: ~
              close:
                start: 24
                end: 25
            result:
              separator:
                start: 25
                end: 26
              ty:
                kind:
                  Identifier:
                    symbol: 3
                span:
                  start: 27
                  end: 30
          block:
            kind:
              Block:
                open:
                  start: 31
                  end: 32
                inner:
                  - inner:
                      Expression:
                        expr:
                          kind:
                            Binary:
                              left:
                                kind:
                                  Identifier:
                                    symbol: 2
                                span:
                                  start: 38
                                  end: 39
                              operator:
                                kind: Add
                                span:
                                  start: 40
                                  end: 41
                              right:
                                kind:
                                  Identifier:
                                    symbol: 4
                                span:
                                  start: 42
                                  end: 43
                          span:
                            start: 38
                            end: 43
                    span:
                      start: 38
                      end: 43
                    separator: ~
                close:
                  start: 44
                  end: 45
            span:
              start: 31
              end: 45
      span:
        start: 0
        end: 45
diagnostics:
  - severity: Warning
    code: E0003
    message: missing separator
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 16
          end: 16
        message: "consider adding `,` here"
    notes: []
