crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__should_recover_from_unclosed_function_block.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.result
---
ast:
  file_id: 0
  items:
    - kind:
        FunctionDefinition:
          signature:
            name:
              symbol: 1
              span:
                start: 5
                end: 9
            params:
              open:
                start: 9
                end: 10
              inner: []
              close:
                start: 10
                end: 11
            result:
              separator:
                start: 11
                end: 12
              ty:
                kind:
                  Identifier:
                    symbol: 2
                span:
                  start: 13
                  end: 17
          block:
            kind:
              Block:
                open:
                  start: 18
                  end: 19
                inner:
                  - inner:
                      Expression:
                        expr:
                          kind:
                            Binary:
                              left:
                                kind:
                                  Int:
                                    value: 5
                                span:
                                  start: 20
                                  end: 21
                              operator:
                                kind: Add
                                span:
                                  start: 22
                                  end: 23
                              right:
                                kind:
                                  Int:
                                    value: 5
                                span:
                                  start: 24
                                  end: 25
                          span:
                            start: 20
                            end: 25
                    span:
                      start: 20
                      end: 25
                    separator: ~
                close:
                  start: 26
                  end: 26
            span:
              start: 18
              end: 26
      span:
        start: 0
        end: 26
diagnostics:
  - severity: Error
    code: E0004
    message: unclosed grouping
    labels:
      - style: Primary
        file_id: 0
        range:
          start: 26
          end: 26
        message: "consider adding `}` here"
      - style: Secondary
        file_id: 0
        range:
          start: 18
          end: 19
        message: opened here
    notes: []
